--- a/docs/blog/Nationality/西湖梦寻.md
+++ b/docs/blog/Nationality/西湖梦寻.md
@@ -1,1 +1,16 @@
 >西湖梦寻
+
+不要给自己强压过多内容，需要有坦然面对失败的心态。
+
+## 剖析自己，减少内耗。
+## 自强不息，逐步完善。
+
+
+**做事情之前不要提前幻想成功，因为会泄掉积攒的能量。事以密成，语以泄败，除了不能幻想也不要跟其他人说你正在努力还没有做成的事**
+
+
+
+不同人的认知不一样，有些事情不好说，说了就可能把现有结构捅破。
+
+说多了是传播负能量，不说是装鸵鸟、显得麻木。
+
